# BattleCity

./: .gitignore  CMakeLists.txt  README.md  battlecity.kdev4  main.cpp
inc/: animatesprite.h  indexbuffers.h  main.h  renderer.h  shadeprogramm.h  sprite.h  texture2D.h  vertexarray.h  vertexbuffers.h
res/: resources.json
res/shaders/: fragment.txt  vertex.txt
src/: animatesprite.cpp  indexbuffers.cpp  main.cpp  renderer.cpp  shadeprogramm.cpp  sprite.cpp  texture2D.cpp  vertexarray.cpp  vertexbufferlayout.cpp  vertexbuffers.cpp
src/game/: game.cpp  game.h  tank.cpp  tank.h
src/resources/: resourcesmanager.cpp  resourcesmanager.h
